API_Reference/pymilvus/v2.3.x/ORM/utility/list_collections.md

# list_collections()

This operation lists all collections in the database used in the current connection.

## Request Syntax

```python
list_collections(
    timeout: float | None,
    using: str = "default",
)
```

__PARAMETERS:__

- __timeout__ (_float _|_ None_)  

    The timeout duration for this operation. Setting this to __None__ indicates that this operation timeouts when any response arrives or any error occurs.

- __using__ (_str_) - 

    The alias of the employed connection.

    The default value is __default__, indicating that this operation employs the default connection.

__RETURN TYPE:__

_list_

__RETURNS:__
A list of collection names.

__EXCEPTIONS:__

- __MilvusException__

    This exception will be raised when any error occurs during this operation, especially when the specified alias does not exist.

## Examples

```python
from pymilvus import connections, utility

connections.connect()

utility.list_collections()
```

